User stats, profile, activity. New fragment activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
             android:name=".activities.UserProfileActivity"
             android:label="User Profile" />
 
+        <activity
+            android:name=".activities.UserStatsActivity"
+            android:label="User Stats" />
+
 
     </application>
 
